--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="promo__text">
                     <h1>bookish buddy —</h1>
                     <p class="promo__descr">место, где книги становятся мостом к дружбе</p>
-                    <button><a href="avt_reg.html" style="color: #F6F4F5; text-decoration: none;">Начать
+                    <button><a href="register.html" style="color: #F6F4F5; text-decoration: none;">Начать
                             поиск</a></button>
                 </div>
             </div>
@@ -49,25 +49,26 @@
                 <div class="blocks__about">
 
                     <div class="block__about">
-                        <div class="block__about__img"><img src="./img/team-building 1.svg" alt=""></div>
+                        <div class="block__about__img"><img src="./img/book_heart.svg" alt=""></div>
                         <div class="block__about__text">
-                            <p>Приятная беседа и атмосфера</p>
+                            <p>Собирай полку из полюбившихся книг</p>
                         </div>
                     </div>
 
                     <div class="block__about">
-                        <div class="block__about__img"><img src="./img/speech-bubble 1.svg" alt=""></div>
+                        <div class="block__about__img"><img src="./img/bokks.svg" alt=""></div>
                         <div class="block__about__text">
-                            <p>Общение о прочитанном</p>
+                            <p>Составляй списки для дальнейшего чтения</p>
                         </div>
                     </div>
 
                     <div class="block__about">
-                        <div class="block__about__img"><img src="./img/search-user 1.svg" alt=""></div>
+                        <div class="block__about__img"><img src="./img/book_pageup.svg" alt=""></div>
                         <div class="block__about__text">
                             <p>Поиск единомышленников</p>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -110,59 +111,6 @@
         </div>
     </section>
 
-    <section class="reviews" id="reviews">
-        <div class="container">
-            <div class="reviews__slide">
-                <h2 class="title">Отзывы</h2>
-
-                <div class="reviews__block">
-                    <div class="review">
-                        <p class="name__client">Женька</p>
-                        <p class="review__client">Крутое приложение, получается найти хороших собеседников, рекомендую"
-                        </p>
-                    </div>
-
-                    <div class="review">
-                        <p class="name__client">Аделаида</p>
-                        <p class="review__client">Давно искала любителей "Звездной бабочки", как будто никто ее не
-                            читал, как мне казалось. И вот наконец-то смогла найти людей, которые испытывают такой же
-                            восторг от прочитанного, как и я.</p>
-                    </div>
-
-                    <div class="review">
-                        <p class="name__client">Ильдар</p>
-                        <p class="review__client">Всё супер, весь вечер провел в приложении. сначала книгу выбирал,
-                            хорошая коллекция, а потом общался</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <section class="contacts" id="contacts">
-        <div class="container">
-            <div class="contacts__slide">
-                <h2 class="title">Контакты</h2>
-                <div class="block__contacts">
-                    <div class="contacts__text">
-                        <ul class="ul__contact">
-                            <li class="li__contact"><b>Генеральный директор:</b> Рубинштейн В. И.</li>
-                            <li class="li__contact"><b>Адрес:</b> Санкт-Петербург, ул. Гельсингфорсская, д. 3, оф. 327
-                            </li>
-                            <li class="li__contact"><b>E-mail:</b> example@gmail.com</li>
-                            <li class="li__contact"><b>Время работы офиса:</b> Пн-Пт. С 9:00 до 19:00</li>
-                        </ul>
-                    </div>
-                    <div class="map">
-                        <script type="text/javascript" charset="utf-8" async
-                            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4e9f2237234164475238de118afda3e804244939e80664713f79ac2b75ab995c&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <footer>
         <div class="container">
             <div class="footer__slide">
@@ -181,8 +129,9 @@
             </div>
         </div>
     </footer>
+    <script src="index.js">
 
-    <script src="./script.js"></script>
+    </script>
 </body>
 
 </html>
