--- a/register.html
+++ b/register.html
@@ -26,39 +26,14 @@
             </div>
         </div>
     </header>
-    <main class="main__avt__reg">
-        <section>
-            <div class="container">
-                <div class="card__tab">
-
-                    <div class="tab">
-                        <input checked id="tab-reg" name="tab-btn" type="radio" value="">
-                        <label for="tab-reg">Регистрация</label>
-                        <input id="tab-avt" name="tab-btn" type="radio" value="">
-                        <label for="tab-avt">Авторизация</label>
-                        <div class="tab-content" id="content-reg">
-                            <form action="#" method="post">
-                                <input type="text" placeholder="ФИО" class="reg_input" required></input>
-                                <input type="tel" placeholder="Номер телефона" class="reg_input" required></input>
-                                <input type="password" placeholder="Пароль" minlength="8" class="reg_input"
-                                    required></input>
-                                <input type="password" placeholder="Повтор пароля" minlength="8" class="reg_input"
-                                    required></input>
-                                <button type="submit" class="btn__tab">Зарегистрироваться</button>
-                        </div>
-                        <div class="tab-content" id="content-avt">
-                            <input type="tel" placeholder="Номер телефона" class="reg_input" required></input>
-                            <input type="password" placeholder="Пароль" minlength="8" class="reg_input"
-                                required></input>
-                            <button type="submit" class="btn__tab"><a href="profil.html" style="color: #F6F4F5; text-decoration: none;">Войти</a></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </section>
-    </main>
+    <h1>Регистрация</h1>
+    <form action="" method="post">
+        <input type="text" id="username" placeholder="Имя" required>
+        <input type="number" id="phone" placeholder="Номер телефона" required>
+        <input type="password" id="password" placeholder="Пароль" required>
+        <input type="password" id="password" placeholder="Повтор пароля" required>
+        <button>Зарегистрироваться</button>
+    </form>
     <footer>
         <div class="container">
             <div class="footer__slide">
