--- a/auth.html
+++ b/auth.html
@@ -20,18 +20,21 @@
                     <ul class="ul__nav">
                         <li><a href="index.html#about" class="a__header">О нас</a></li>
                         <li><a href="index.html#questions" class="a__header">Вопросы</a></li>
-                        <li><a href="avt_reg.html" class="a__header">Личный кабинет</a></li>
+                        <li><a href="register.html" class="a__header">Личный кабинет</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
-    <h1>Вход в личный кабинет</h1>
-    <form action="" method="post">
-        <input type="number" id="phone" placeholder="Номер телефона" required>
-        <input type="password" id="password" placeholder="Пароль" required>
-        <button>Войти</button>
-    </form>
+    <section class="avt_log">
+        <h1 class="h1__ar">Вход</h1>
+        <form action="" method="post">
+            <input type="number" id="phone" placeholder="Номер телефона" required>
+            <input type="password" id="password" placeholder="Пароль" required>
+            <button>Войти</button>
+            <a href="register.html" class=".a__avt ">Зарегистрироваться, если нет аккаунта</a>
+        </form>
+    </section>
     <footer>
         <div class="container">
             <div class="footer__slide">
@@ -41,9 +44,9 @@
                     </div>
                     <nav>
                         <ul class="ul__nav">
-                            <li><a href="#about" class="a__footer">О нас</a></li>
-                            <li><a href="#questions" class="a__footer">Вопросы</a></li>
-                            <li><a href="profile.html" class="a__footer">Личный кабинет</a></li>
+                            <li><a href="index.html#about" class="a__footer">О нас</a></li>
+                            <li><a href="index.html#questions" class="a__footer">Вопросы</a></li>
+                            <li><a href="register.html" class="a__footer">Личный кабинет</a></li>
                         </ul>
                     </nav>
                 </div>
