--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <ul class="ul__nav">
                         <li><a href="#about" class="a__header ">О нас</a></li>
                         <li><a href="#questions" class="a__header ">Вопросы</a></li>
-                        <li><a href="avt_reg.html" class="a__header ">Личный кабинет</a></li>
+                        <li><a href="register.html" class="a__header ">Личный кабинет</a></li>
                     </ul>
                 </nav>
             </div>
@@ -35,8 +35,7 @@
                 <div class="promo__text">
                     <h1>bookish buddy —</h1>
                     <p class="promo__descr">место, где книги становятся мостом к дружбе</p>
-                    <button><a href="register.html" style="color: #F6F4F5; text-decoration: none;">Начать
-                            поиск</a></button>
+                    <button><a href="register.html" class="a_link_main">Поехали!</a></button>
                 </div>
             </div>
         </div>
@@ -65,7 +64,7 @@
                     <div class="block__about">
                         <div class="block__about__img"><img src="./img/book_pageup.svg" alt=""></div>
                         <div class="block__about__text">
-                            <p>Поиск единомышленников</p>
+                            <p>Оставляй свои впечатления о прочитанном</p>
                         </div>
                     </div>
 
@@ -81,11 +80,11 @@
                 <div class="accordion" id="accordion-1" style="max-width: 800px; margin: 0 auto;">
                     <div class="accordion__item accordion__item_show">
                         <div class="accordion__header">
-                            По какому принципу строится общение?
+                            По какому принципу работает Ваша система?
                         </div>
                         <div class="accordion__body">
-                            С помощью алгоритмов фильтрации книг по параметрам, пользователи могут найти то самое
-                            произведений и присоединиться к беседе, обсудить прочитанное и вступить в дискуссию.
+                            В нашей системе авторизированные пользователи имеют возможность составлять свои списки книг
+                            и управлять ими.
                         </div>
                     </div>
                     <div class="accordion__item">
@@ -94,16 +93,16 @@
                         </div>
                         <div class="accordion__body">
                             Для регистрации необходим номер телефона, а также надежный пароль. Эти личные данные
-                            останутся в системе, недоступными для других пользователей.
+                            останутся в системе недоступными для других пользователей.
                         </div>
                     </div>
                     <div class="accordion__item">
                         <div class="accordion__header">
-                            Что нужно указать в личном кабинете?
+                            О каких списках идет речь?
                         </div>
                         <div class="accordion__body">
-                            Помимо таких данных, как имя и возраст, пользователи могут указать своих любимых авторов и
-                            книги, чтобы сформировать у других людей представление о своих литературных вкусах.
+                            Из виртуальной библиотеки Вы можете выбрать книгу, а затем по усмотрению добавить её либо в
+                            лист прочитанных, либо в запланированных.
                         </div>
                     </div>
                 </div>
@@ -120,9 +119,9 @@
                     </div>
                     <nav>
                         <ul class="ul__nav">
-                            <li><a href="#about" class="a__header">О нас</a></li>
-                            <li><a href="#questions" class="a__header">Вопросы</a></li>
-                            <li><a href="profile.html" class="a__header">Личный кабинет</a></li>
+                            <li><a href="#about" class="a__footer">О нас</a></li>
+                            <li><a href="#questions" class="a__footer">Вопросы</a></li>
+                            <li><a href="register.html" class="a__footer">Личный кабинет</a></li>
                         </ul>
                     </nav>
                 </div>
