--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
                     <ul class="ul__nav">
                         <li><a href="#about" class="a__header">О нас</a></li>
                         <li><a href="#questions" class="a__header">Вопросы</a></li>
-                        <li><a href="profile.html" class="a__header">Личный кабинет</a></li>
+                        <li><a href="register.html" class="a__header">Личный кабинет</a></li>
                     </ul>
                 </nav>
             </div>
@@ -64,7 +64,7 @@
                         <ul class="ul__nav">
                             <li><a href="#about" class="a__footer">О нас</a></li>
                             <li><a href="#questions" class="a__footer">Вопросы</a></li>
-                            <li><a href="profile.html" class="a__footer">Личный кабинет</a></li>
+                            <li><a href="register.html" class="a__footer">Личный кабинет</a></li>
                         </ul>
                     </nav>
                 </div>
