--- a/register.html
+++ b/register.html
@@ -20,20 +20,23 @@
                     <ul class="ul__nav">
                         <li><a href="index.html#about" class="a__header">О нас</a></li>
                         <li><a href="index.html#questions" class="a__header">Вопросы</a></li>
-                        <li><a href="avt_reg.html" class="a__header">Личный кабинет</a></li>
+                        <li><a href="register.html" class="a__header">Личный кабинет</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
-    <h1>Регистрация</h1>
-    <form action="" method="post">
-        <input type="text" id="username" placeholder="Имя" required>
-        <input type="number" id="phone" placeholder="Номер телефона" required>
-        <input type="password" id="password" placeholder="Пароль" required>
-        <input type="password" id="password" placeholder="Повтор пароля" required>
-        <button>Зарегистрироваться</button>
-    </form>
+    <section class="avt_log">
+        <h1 class="h1__ar">Регистрация</h1>
+        <form action="" method="post">
+            <input type="text" id="username" placeholder="Имя" required>
+            <input type="number" id="phone" placeholder="Номер телефона" required>
+            <input type="password" id="password" placeholder="Пароль" required>
+            <input type="password" id="password" placeholder="Повтор пароля" required>
+            <button>Зарегистрироваться</button>
+            <a href="auth.html" class=".a__avt ">Войти, если есть аккаунт</a>
+        </form>
+    </section>
     <footer>
         <div class="container">
             <div class="footer__slide">
@@ -43,9 +46,9 @@
                     </div>
                     <nav>
                         <ul class="ul__nav">
-                            <li><a href="#about" class="a__footer">О нас</a></li>
-                            <li><a href="#questions" class="a__footer">Вопросы</a></li>
-                            <li><a href="profile.html" class="a__footer">Личный кабинет</a></li>
+                            <li><a href="index.html#about" class="a__footer">О нас</a></li>
+                            <li><a href="index.html#questions" class="a__footer">Вопросы</a></li>
+                            <li><a href="register.html" class="a__footer">Личный кабинет</a></li>
                         </ul>
                     </nav>
                 </div>
