регистрация и окно с "вы вошли"

--- a/public/library.html
+++ b/public/library.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="book__card__info">
                             <p class="book__name">Преступление и наказание</p>
-                            <p class="book__author">Достоевский Ф.М.</p>
+                            <p class="book__loginor">Достоевский Ф.М.</p>
                             <p class="book__about">Герой романа – Родион Раскольников – студент, который "задавлен
                                 бедностью". Он поддался популярным в то время идеям о том, что все люди делятся на
                                 "тварей дрожащих" и "наполеонов". Так он решается на убийство злой и жадной
@@ -51,7 +51,7 @@
                         </div>
                         <div class="book__card__info">
                             <p class="book__name">Никогде</p>
-                            <p class="book__author">Нил Гейман</p>
+                            <p class="book__loginor">Нил Гейман</p>
                             <p class="book__about">Размеренная жизнь в буквальном смысле проваливается под землю,
                                 когда Ричард встречает на улице израненную девушку, умоляющую о помощи. Жест
                                 милосердия откроет для молодого человека дверь в удивительный и опасный мир — Нижний
@@ -67,7 +67,7 @@
                         </div>
                         <div class="book__card__info">
                             <p class="book__name">Евгений Онегин</p>
-                            <p class="book__author">Пушкин А.С.</p>
+                            <p class="book__loginor">Пушкин А.С.</p>
                             <p class="book__about">Роман в стихах «Евгений Онегин» по праву можно считать
                                 энциклопедией русской жизни — в нем отразились быт и нравы первой трети XIX века, и
                                 энциклопедией мировой культуры — в нем А. С. Пушкин называет более двухсот имен
@@ -82,7 +82,7 @@
                         </div>
                         <div class="book__card__info">
                             <p class="book__name">Пехотная баллада</p>
-                            <p class="book__author">Терри Пратчетт</p>
+                            <p class="book__loginor">Терри Пратчетт</p>
                             <p class="book__about">Восстаньте, сыны Борогравии, на защиту Родины-Матери! Злобные и
                                 вероломные враги снова у наших границ! В их злобности нет сомнений, и то, что мы
                                 непрерывно воюем — их вина! Ведь мы — миролюбивый и честный народ, не так ли?
@@ -97,7 +97,7 @@
                         </div>
                         <div class="book__card__info">
                             <p class="book__name">Над пропастью во ржи</p>
-                            <p class="book__author">Дж. Сэлинджер</p>
+                            <p class="book__loginor">Дж. Сэлинджер</p>
                             <p class="book__about">Повествование ведется от лица главного героя, шестнадцатилетнего
                                 Холдена Колфилда, находящегося на лечении в больнице. На протяжении всего романа
                                 читатель наблюдает за метаниями и внутренними терзаниями подростка, который, с одной
@@ -111,7 +111,7 @@
                         </div>
                         <div class="book__card__info">
                             <p class="book__name">Звездная бабочка</p>
-                            <p class="book__author">Бернар Вербер</p>
+                            <p class="book__loginor">Бернар Вербер</p>
                             <p class="book__about">Человечество оказалось на грани гибели: природные катаклизмы,
                                 смертельные вирусы, теракты, насилие и жестокость. Отчаянный инженер-идеалист
                                 конструирует корабль "Звездная бабочка", чтобы перелететь на другую планету и дать
@@ -127,7 +127,7 @@
                         </div>
                         <div class="book__card__info">
                             <p class="book__name">Джейн Эйр</p>
-                            <p class="book__author">Шарлотта Бронте </p>
+                            <p class="book__loginor">Шарлотта Бронте </p>
                             <p class="book__about">История о взрослении маленькой девочки с непростой судьбой,
                                 которая была лишена родительской любви. Неприспособленная к людской жестокости и
                                 обманам, она, тем не менее, находит в себе силы подняться после предательства. Книга
