--- a/public/profile.html
+++ b/public/profile.html
@@ -29,27 +29,7 @@
 
     <section>
         <div class="container">
-            <div class="profil">
-                <div class="profil__part1">
-                    <div class="circl"></div>
-                    <input type="text" id="name" placeholder="Имя" class="input__profil" />
-                    <input type="date" id="date" class="input__profil" />
-                </div>
-                <div class="profil__part2">
-                    <h2 class="title">Ваши литературные вкусы</h2>
-                    <form>
-                        <p class="block__about__text">Выберите предпочитаемые жанры:</p><br />
-                        <select multiple="multiple" style="width: 90%; height: auto;">
-                            <option value="Русская классика">Русская классика </option>
-                            <option value="Романы">Романы</option>
-                            <option value="Фэнтези">Фэнтези</option>
-                        </select>
-                    </form>
-                    <h2>Расскажите о своих любимых книгах</h2>
-                    <textarea id="about__client" name="about__client"></textarea>
-                    <p><a href="choice.html" class="promo__descr">Перейти к поиску книг</a></p>
-                </div>
-            </div>
+            <h1>здесь будет профиль</h1>
         </div>
     </section>
 
@@ -71,8 +51,6 @@
             </div>
         </div>
     </footer>
-
-    <script src="./script.js"></script>
 </body>
 
 </html>
