--- a/public/auth.html
+++ b/public/auth.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>bookish buddy</title>
     <link rel="icon" href="img/bookicon.svg">
+    <script src="./auth.js" defer></script>
 </head>
 
 <body>
@@ -28,12 +29,10 @@
     </header>
     <section class="avt_log">
         <h1 class="h1__ar">Вход</h1>
-        <form action="" method="post">
             <input type="email" id="email" placeholder="email" required>
             <input type="password" id="password" placeholder="Пароль" required>
             <button id="loginButton">Войти</button>
-            <a href="register.html" class="a__avt ">Зарегистрироваться, если нет аккаунта</a>
-        </form>
+            <a href="register.html" class="a__avt">Зарегистрироваться, если нет аккаунта</a>
     </section>
     <footer>
         <div class="container">
