--- a/public/register.html
+++ b/public/register.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>bookish buddy</title>
     <link rel="icon" href="img/bookicon.svg">
+    <script src="./register.js" defer></script>
 </head>
 
 <body>
@@ -28,14 +29,13 @@
     </header>
     <section class="avt_log">
         <h1 class="h1__ar">Регистрация</h1>
-        <form action="" method="post">
-            <input type="text" id="username" placeholder="Имя" required>
-            <input type="email" id="email" placeholder="email" required>
-            <input type="password" id="password" placeholder="Пароль" required>
-            <input type="password" id="password" placeholder="Повтор пароля" required>
-            <button id="loginButton">Зарегистрироваться</button>
-            <a href="auth.html" class="a__avt ">Войти, если есть аккаунт</a>
-        </form>
+        <input type="text" id="username" placeholder="Имя" required>
+        <input type="email" id="email" placeholder="email" required>
+        <input type="password" id="password" placeholder="Пароль" required>
+        <input type="password" id="passwordTwo" placeholder="Повтор пароля" required>
+        <button id="registerButton">Зарегистрироваться</button>
+        <a href="auth.html" class="a__avt">Войти, если есть аккаунт</a>
+
     </section>
     <footer>
         <div class="container">
