сделан редирект на странице с входом + три пустышки

--- a/public/readit.html
+++ b/public/readit.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>bookish buddy</title>
     <link rel="icon" href="img/bookicon.svg">
+    <script src="./register.js" defer></script>
 </head>
 
 <body>
@@ -18,27 +19,18 @@
                 </div>
                 <nav>
                     <ul class="ul__nav">
-                        <li><a href="#about" class="a__header">О нас</a></li>
-                        <li><a href="#questions" class="a__header">Вопросы</a></li>
+                        <li><a href="index.html#about" class="a__header">О нас</a></li>
+                        <li><a href="index.html#questions" class="a__header">Вопросы</a></li>
                         <li><a href="register.html" class="a__header">Личный кабинет</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
-
     <section>
-        <div class="container">
-            <h2>Ваш профиль, дорогой пользователь</h2>
-            <input type="text" id="username" placeholder="Имя" required>
-            <input type="email" id="email" placeholder="email" required>
-            <input type="password" id="password" placeholder="Пароль" required>
-            <a href="search.html" class="a__avt">Искать книги</a>
-            <a href="readit.html" class="a__avt">Перейти в список прочитанных книг</a>
-            <a href="plans.html" class="a__avt">Перейти в список запланированных книг</a>
-        </div>
-    </section>
+        <h1>здесь прочитанные книги</h1>
 
+    </section>
     <footer>
         <div class="container">
             <div class="footer__slide">
@@ -48,8 +40,8 @@
                     </div>
                     <nav>
                         <ul class="ul__nav">
-                            <li><a href="#about" class="a__footer">О нас</a></li>
-                            <li><a href="#questions" class="a__footer">Вопросы</a></li>
+                            <li><a href="index.html#about" class="a__footer">О нас</a></li>
+                            <li><a href="index.html#questions" class="a__footer">Вопросы</a></li>
                             <li><a href="register.html" class="a__footer">Личный кабинет</a></li>
                         </ul>
                     </nav>
