--- a/public/profile.html
+++ b/public/profile.html
@@ -27,15 +27,17 @@
         </div>
     </header>
 
-    <section>
+    <section class="profile">
         <div class="container">
-            <h2>Ваш профиль, дорогой пользователь</h2>
-            <input type="text" id="username" placeholder="Имя" required>
-            <input type="email" id="email" placeholder="email" required>
-            <input type="password" id="password" placeholder="Пароль" required>
-            <a href="search.html" class="a__avt">Искать книги</a>
-            <a href="readit.html" class="a__avt">Перейти в список прочитанных книг</a>
-            <a href="plans.html" class="a__avt">Перейти в список запланированных книг</a>
+            <div class="prof__sod">
+                <h2>Ваш профиль, дорогой пользователь</h2>
+                <input type="text" id="username" placeholder="Имя" required>
+                <input type="email" id="email" placeholder="email" required>
+                <input type="password" id="password" placeholder="Пароль" required>
+                <a href="search.html" class="a__avt">Искать книги</a>
+                <a href="readit.html" class="a__avt">Перейти в список прочитанных книг</a>
+                <a href="plans.html" class="a__avt">Перейти в список запланированных книг</a>
+            </div>
         </div>
     </section>
 
