--- a/public/search.html
+++ b/public/search.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>bookish buddy</title>
     <link rel="icon" href="img/bookicon.svg">
-    <script src="./register.js" defer></script>
+    <script src="./search.js" defer></script>
 </head>
 
 <body>
@@ -27,10 +27,120 @@
             </div>
         </div>
     </header>
-    <section>
-        <h1>здесь будет поиск книг</h1>
+    <main>
+        <section class="choice">
+            <div class="container">
+                <div class="search">
+                    <input type="text" id="book__card__info" placeholder="Начать поиск">
+                </div>
+                <div class="block-cover">
+                    <div class="book__card">
+                        <div class="book__card__img"><img src="./img/prectyplenie.png" alt="" class="img__book">
+                        </div>
+                        <div class="book__card__info">
+                            <p class="book__name">Преступление и наказание</p>
+                            <p class="book__loginor">Достоевский Ф.М.</p>
+                            <p class="book__about">Герой романа – Родион Раскольников – студент, который "задавлен
+                                бедностью". Он поддался популярным в то время идеям о том, что все люди делятся на
+                                "тварей дрожащих" и "наполеонов". Так он решается на убийство злой и жадной
+                                старухи-процентщицы, чтобы разом изменить свою судьбу и поправить положение своей
+                                семьи. Философия вступает в конфликт с совестью и душевным состоянием героя: он не в
+                                силах справиться с тяжким бременем преступления.</p>
+                        </div>
+                    </div>
+                    <div class="book__card">
+                        <div class="book__card__img"><img src="./img/nikogde.png" alt="" class="img__book">
+                        </div>
+                        <div class="book__card__info">
+                            <p class="book__name">Никогде</p>
+                            <p class="book__loginor">Нил Гейман</p>
+                            <p class="book__about">Размеренная жизнь в буквальном смысле проваливается под землю,
+                                когда Ричард встречает на улице израненную девушку, умоляющую о помощи. Жест
+                                милосердия откроет для молодого человека дверь в удивительный и опасный мир — Нижний
+                                Лондон, где время и пространство не подвластны законам физики, смертельная опасность
+                                дышит в затылок, крысы управляют людьми и ангелы пьют вино из затонувшей Атлантиды.
+                                Вместе с новыми друзьями Ричарду предстоит невероятная миссия. Никто не знает, кто
+                                враг, любой может оказаться предателем, а каждая дверь — воротами в ад...</p>
+                        </div>
+                    </div>
 
-    </section>
+                    <div class="book__card">
+                        <div class="book__card__img"><img src="./img/onegin.png" alt="" class="img__book">
+                        </div>
+                        <div class="book__card__info">
+                            <p class="book__name">Евгений Онегин</p>
+                            <p class="book__loginor">Пушкин А.С.</p>
+                            <p class="book__about">Роман в стихах «Евгений Онегин» по праву можно считать
+                                энциклопедией русской жизни — в нем отразились быт и нравы первой трети XIX века, и
+                                энциклопедией мировой культуры — в нем А. С. Пушкин называет более двухсот имен
+                                русских, античных и европейских писателей, философов, полководцев, художников,
+                                актеров, композиторов: от Апулея до Россини. Но еще это и энциклопедия чувств, по
+                                меткому определению И. Андроникова. </p>
+                        </div>
+                    </div>
+
+                    <div class="book__card">
+                        <div class="book__card__img"><img src="./img/pexotnaay-ballada.png" alt="" class="img__book">
+                        </div>
+                        <div class="book__card__info">
+                            <p class="book__name">Пехотная баллада</p>
+                            <p class="book__loginor">Терри Пратчетт</p>
+                            <p class="book__about">Восстаньте, сыны Борогравии, на защиту Родины-Матери! Злобные и
+                                вероломные враги снова у наших границ! В их злобности нет сомнений, и то, что мы
+                                непрерывно воюем — их вина! Ведь мы — миролюбивый и честный народ, не так ли?
+                                Есть лишь одна проблема: за годы войны сыны у Борогравии кончились. Настал черёд
+                                дочерей облачаться в мундиры и браться за сабли. И если девушек не пускают в армию
+                                по закону, значит, придётся проникнуть в неё обманом...</p>
+                        </div>
+                    </div>
+
+                    <div class="book__card">
+                        <div class="book__card__img"><img src="./img/nad-propacti.png" alt="" class="img__book">
+                        </div>
+                        <div class="book__card__info">
+                            <p class="book__name">Над пропастью во ржи</p>
+                            <p class="book__loginor">Дж. Сэлинджер</p>
+                            <p class="book__about">Повествование ведется от лица главного героя, шестнадцатилетнего
+                                Холдена Колфилда, находящегося на лечении в больнице. На протяжении всего романа
+                                читатель наблюдает за метаниями и внутренними терзаниями подростка, который, с одной
+                                стороны, хочет почувствовать себя взрослым и самостоятельным, с другой же –
+                                совершенно не готов нести ответственность за свои поступки. </p>
+                        </div>
+                    </div>
+
+                    <div class="book__card">
+                        <div class="book__card__img"><img src="./img/Zvezdnaya_babochka.png" alt="" class="img__book">
+                        </div>
+                        <div class="book__card__info">
+                            <p class="book__name">Звездная бабочка</p>
+                            <p class="book__loginor">Бернар Вербер</p>
+                            <p class="book__about">Человечество оказалось на грани гибели: природные катаклизмы,
+                                смертельные вирусы, теракты, насилие и жестокость. Отчаянный инженер-идеалист
+                                конструирует корабль "Звездная бабочка", чтобы перелететь на другую планету и дать
+                                человечеству новый шанс. Несколько тысяч тщательно отобранных добровольцев рискнули
+                                поверить, что можно все начать сначала и построить справедливое общество. Смогут ли
+                                они выжить на гигантском корабле и добраться до загадочной планеты? Идеалы — это
+                                прекрасно, но куда бы человек ни сбежал, он берет с собой свою сущность.</p>
+                        </div>
+                    </div>
+
+                    <div class="book__card">
+                        <div class="book__card__img"><img src="./img/djein.png" alt="" class="img__book">
+                        </div>
+                        <div class="book__card__info">
+                            <p class="book__name">Джейн Эйр</p>
+                            <p class="book__loginor">Шарлотта Бронте </p>
+                            <p class="book__about">История о взрослении маленькой девочки с непростой судьбой,
+                                которая была лишена родительской любви. Неприспособленная к людской жестокости и
+                                обманам, она, тем не менее, находит в себе силы подняться после предательства. Книга
+                                – прекрасный образец классической британской литературы, где присутствует и
+                                старинное поместье, и тайны семьи Рочестеров, и большая, бескорыстная любовь. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer>
         <div class="container">
             <div class="footer__slide">
