--- a/public/profile.html
+++ b/public/profile.html
@@ -32,14 +32,30 @@
             <div class="prof__sod">
                 <h2>Ваш профиль, дорогой пользователь</h2>
                 <input type="text" id="username" placeholder="Имя" required>
-                <input type="email" id="email" placeholder="email" required>
+                <input type="email" id="email" placeholder="Email" required>
                 <input type="password" id="password" placeholder="Пароль" required>
                 <a href="search.html" class="a__avt">Искать книги</a>
                 <a href="readit.html" class="a__avt">Перейти в список прочитанных книг</a>
                 <a href="plans.html" class="a__avt">Перейти в список запланированных книг</a>
+                <div>
+                    <button id="ButtonLogOut">Выйти</button>
+                </div>
             </div>
         </div>
     </section>
+
+    <script>
+        if (localStorage.getItem('currentUser')) {
+            MainSectionButtonLogOut();
+        }
+
+        document.getElementById('ButtonLogOut').addEventListener('click', logoutUser);
+        function logoutUser() {
+            localStorage.removeItem('currentUser');
+            alert('Вы покинули нашу замечательную систему. До новых встреч. Вы же вернетесь, да?((');
+            window.location.href = '/login'
+        }
+    </script>
 
     <footer>
         <div class="container">
@@ -59,6 +75,7 @@
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
