--- a/public/plans.html
+++ b/public/plans.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>bookish buddy</title>
     <link rel="icon" href="img/bookicon.svg">
-    <script src="./register.js" defer></script>
+    <script src="./plans.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -29,7 +30,7 @@
     </header>
     <section>
         <h1>здесь будет список запланированных книг</h1>
-
+        <ul id="Plans"></ul>
     </section>
     <footer>
         <div class="container">
