--- a/public/search.html
+++ b/public/search.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>bookish buddy</title>
     <link rel="icon" href="img/bookicon.svg">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./search.js" defer></script>
 </head>
 
@@ -47,6 +48,7 @@
                                 семьи. Философия вступает в конфликт с совестью и душевным состоянием героя: он не в
                                 силах справиться с тяжким бременем преступления.</p>
                         </div>
+                        <button class="addToPlans" data-name="Преступление и наказание" data-loginor="Достоевский Ф.М." data-img="prectyplenie.png">Добавить в список "Хочу прочесть"</button>
                     </div>
                     <div class="book__card">
                         <div class="book__card__img"><img src="./img/nikogde.png" alt="" class="img__book">
@@ -62,6 +64,7 @@
                                 Вместе с новыми друзьями Ричарду предстоит невероятная миссия. Никто не знает, кто
                                 враг, любой может оказаться предателем, а каждая дверь — воротами в ад...</p>
                         </div>
+                        <button class="addToPlans" data-name="Никогде" data-loginor="Нил Гейман" data-img="nikogde.png">Добавить в список "Хочу прочесть"</button>
                     </div>
 
                     <div class="book__card">
