--- a/public/plans.html
+++ b/public/plans.html
@@ -29,8 +29,12 @@
         </div>
     </header>
     <section>
-        <h1>здесь будет список запланированных книг</h1>
-        <ul id="Plans"></ul>
+        <div class="container">
+            <div class="plans__slide">
+                <h2 class="title">Список "Хочу прочитать"</h2>
+                <ul id="Plans"></ul>
+            </div>
+        </div>
     </section>
     <footer>
         <div class="container">
