авторизация + обновление данных в бд

--- a/public/readit.html
+++ b/public/readit.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>bookish buddy</title>
     <link rel="icon" href="img/bookicon.svg">
-    <script src="./register.js" defer></script>
+    <script src="./readit.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -28,8 +29,12 @@
         </div>
     </header>
     <section>
-        <h1>здесь прочитанные книги</h1>
-
+        <div class="container">
+            <div class="plans__slide">
+                <h2 class="title">Список "Прочитанные книги"</h2>
+                <ul id="ReadIt"></ul>
+            </div>
+        </div>
     </section>
     <footer>
         <div class="container">
