--- a/public/search.html
+++ b/public/search.html
@@ -48,7 +48,10 @@
                                 семьи. Философия вступает в конфликт с совестью и душевным состоянием героя: он не в
                                 силах справиться с тяжким бременем преступления.</p>
                         </div>
-                        <button class="addToPlans" data-name="Преступление и наказание" data-loginor="Достоевский Ф.М." data-img="prectyplenie.png">Добавить в список "Хочу прочесть"</button>
+                        <button class="addToPlans" data-name="Преступление и наказание" data-loginor="Достоевский Ф.М."
+                            data-img="prectyplenie.png">Добавить в список "Хочу прочесть"</button>
+                        <button class="addToReadIt" data-name="Преступление и наказание" data-loginor="Достоевский Ф.М."
+                            data-img="prectyplenie.png">Добавить в список "Прочитано"</button>
                     </div>
                     <div class="book__card">
                         <div class="book__card__img"><img src="./img/nikogde.png" alt="" class="img__book">
@@ -64,7 +67,8 @@
                                 Вместе с новыми друзьями Ричарду предстоит невероятная миссия. Никто не знает, кто
                                 враг, любой может оказаться предателем, а каждая дверь — воротами в ад...</p>
                         </div>
-                        <button class="addToPlans" data-name="Никогде" data-loginor="Нил Гейман" data-img="nikogde.png">Добавить в список "Хочу прочесть"</button>
+                        <button class="addToPlans" data-name="Никогде" data-loginor="Нил Гейман"
+                            data-img="nikogde.png">Добавить в список "Хочу прочесть"</button>
                     </div>
 
                     <div class="book__card">
